fix(browser-extension): url pushing to the right the switch if too long

--- a/packages/browser-extension/src/styles/popup.css
+++ b/packages/browser-extension/src/styles/popup.css
@@ -170,6 +170,7 @@ strong {
 
 .switch-label > span {
   line-height: 1.25rem;
+  word-break: break-all;
 }
 
 .slider {
